<?xml version="1.0"?>
<package format="2">
  <name>Covid_Test_Collector</name>
  <version>0.0.0</version>
  <description>The Covid_Test_Collector package</description>

  <maintainer email="lbarret@umd.edu">Loic</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Lbarret/Covid_Test_Collector</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>fiducial_msgs</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>control_msgs</build_depend>
 

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>actionlib</build_export_depend>
  <build_export_depend>fiducial_msgs</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>tf2_geometry_msgs</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>control_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>fiducial_msgs</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>control_msgs</exec_depend>

  <test_depend>rostest</test_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
